--- a/static/make-reservation.html
+++ b/static/make-reservation.html
@@ -68,35 +68,35 @@
 
 
         <div class="row">
-          <div class="col-md-3"></div>
-          <div class="col-md-6">
-            <h1 class="mt-5">Search for Availability</h1>
+          <div class="col">
+            <h1>Make reservation</h1>
 
-<form action="reservation.html" method="get">
+            <form method="post" action="" class="needs-validation" novalidate>
+                <div class="form-group mt-5">
+                    <label for="first_name">First name:</label>
+                    <input type="text" name="first_name" id="first_name" class="form-control" required autocomplete="off">
+                </div>
 
-<div class="form-row">
+                <div class="form-group">
+                    <label for="last_name_name">Last name:</label>
+                    <input type="text" name="last_name" id="last_name" class="form-control" required autocomplete="off">
+                </div>
 
-<div class="col">
-  <div class="form-group">
-    <label for="start_date" class="form-label">Starting date</label>
-    <input required type="date" class="form-control" id="start_date" name="start_date" aria-describedby="startDateHelp">
-    <div id="start_date" class="form-text">Enter your starting date in the form of YYYY-MM-DD</div>
-  </div>
-</div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" class="form-control" required autocomplete="off">
+                </div>
 
-<div class="col">
-  <div class="form-group">
-    <label for="end_date" class="form-label">Ending date</label>
-    <input required type="date" class="form-control" id="end_date" name="end_date" aria-describedby="endDateHelp">
-    <div id="endDateHelp" class="form-text">Enter your ending date in the form of YYYY-MM-DD</div>
-  </div>
-</div>
+                <div class="form-group">
+                    <label for="email">Phone:</label>
+                    <input type="text" name="phone" id="phone" class="form-control" required autocomplete="off">
+                </div>
 
-</div>
+                <hr>
 
-<button type="submit" class="btn btn-primary">Search Availability</button>
+                <input type="submit" class="btn btn-primary" value="Make reservation">
 
-</form>
+            </form>
 
           </div>
         </div>
