--- a/html-sources/reservation.html
+++ b/html-sources/reservation.html
@@ -5,27 +5,13 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
       <title>Mmy nice page</title>
+      
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css">
       <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
-      <style>
-        .my-footer {
-          height: 5em;
-          background-color: #163b65;
-          margin-top: 1.5em;
-          padding: 1em;
-          color: white;
-          font-size: 80%;
-        }
+      <link rel="stylesheet" type="text/css" href="static/css/styles.css">
 
-        .room-image{
-            max-width: 50%;
-        }
-        .notie-container {
-            box-shadow: none;
-        }
-      </style>
   </head>
 
   <body>
@@ -125,8 +111,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js"></script>
   <script src="https://unpkg.com/notie"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script>
-    console.log("I am printing from JS");
+    let attention = Prompt();
 
     // Example starter JavaScript for disabling form submissions if there are invalid fields
     (function () {
@@ -150,7 +138,25 @@
     })()
 
     document.getElementById("colorButton").addEventListener("click", function(){
-      notify("This is my mesasge", "success")
+      let html = `
+      <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
+        <div class="form-row">
+          <div class="col"
+            <div class="form-row" id="reservation-dates-modal">
+
+              <div class="col">
+                <input disabled required class="form-control" type"=text" name="start" id="start" placeholder="Arrival">
+              </div>  
+              <div class="col">
+                <input disabled required class="form-control" type"=text" name="end" id="end" placeholder="Departure">
+              </div> 
+
+            </div>
+          </div>
+        </div>       
+      </form>
+      `;
+      attention.custom({msg: html, title:"Choose your dates"});
     })
 
     const elem = document.getElementById('reservation-date');
@@ -163,6 +169,115 @@
           type: msgType,
           text: msg,
     })
+    }
+
+    function notifyMod(title, text, icon, confirmButtonText) {
+      Swal.fire({
+        title: title,
+        html: text,
+        icon: icon,
+        showCancelButton: false,
+        confirmButtonText: confirmButtonText
+      })
+    }
+
+    function Prompt() {
+      let toast = function(c) {
+
+        const {
+            msg = "",
+            icon = "success",
+            position = "top-end",
+        } = c;
+
+        const Toast = Swal.mixin({
+            toast: true,
+            title: msg,
+            position: position,
+            icon: icon,          
+            showConfirmButton: false,
+            timer: 3000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+              toast.addEventListener('mouseenter', Swal.stopTimer)
+              toast.addEventListener('mouseleave', Swal.resumeTimer)
+            }
+          })
+
+          Toast.fire({})
+      }
+      let success = function(c) {
+
+        const {
+          msg = "",
+          title = "",
+          footer = "",
+        } = c;
+
+        Swal.fire({
+            icon: 'success',
+            title: title,
+            text: msg,
+            footer: footer
+          })
+      }
+
+      let error = function(c) {
+        const {
+          msg = "",
+          title = "",
+          footer = "",
+        } = c;
+        Swal.fire({
+            icon: 'error',
+            title: title,
+            text: msg,
+            footer: footer
+          })
+        }
+
+       async function custom(c) {
+          const {
+            msg = "",
+            title = "",
+          } = c;
+
+          const { value: formValues } = await Swal.fire({
+              title: title,
+              html: msg,
+              backdrop: false,
+              focusConfirm: false,
+              showCancelButton: true,
+              willOpen: () => {
+                const elem = document.getElementById('reservation-dates-modal');
+                const rp = new DateRangePicker(elem, {
+                  format: 'yyyy-mm-dd',
+                  showOnFocus: true,
+                })
+              }, 
+              preConfirm: () => {
+                return [
+                  document.getElementById('start').value,
+                  document.getElementById('end').value
+                ]
+              },
+              didOpen: () => {
+                document.getElementById('start').removeAttribute('disabled');
+                document.getElementById('end').removeAttribute('disabled');
+              }
+          })
+
+          if (formValues) {
+            Swal.fire(JSON.stringify(formValues)) 
+          }
+        }
+
+      return{
+        toast: toast,
+        success: success,
+        error: error,
+        custom: custom,
+      }
     }
 
 
