--- a/html-sources/index.html
+++ b/html-sources/index.html
@@ -58,21 +58,21 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/house.jpg" class="d-block w-100" alt="Main view"">
+          <img src="./static/images/house.jpg" class="d-block w-100" alt="Main view"">
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./images/fireplace.jpg" class="d-block w-100" alt="fireplace">
+          <img src="./static/images/fireplace.jpg" class="d-block w-100" alt="fireplace">
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./images/bedrrom.jpg" class="d-block w-100" alt="bedroom">
+          <img src="./static/images/bedrrom.jpg" class="d-block w-100" alt="bedroom">
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
